multi-idioma y componente Login hechos

--- a/cuidados/src/components/translations/en/global.json
+++ b/cuidados/src/components/translations/en/global.json
@@ -1,6 +1,6 @@
 {
     "footer":{
-        "Hello-world": "Hello-world"
+        "Hello-world": "Choose your languaje"
     },
     "claim":{
         "claim-phrase": "We care for you, we care for them.",
