--- a/cuidados/src/components/translations/es/global.json
+++ b/cuidados/src/components/translations/es/global.json
@@ -1,6 +1,6 @@
 {
     "footer":{
-        "Hello-world": "Hola-Mundo"
+        "Hello-world": "Elije tu idioma"
     },
     "claim":{
         "claim-phrase": "Nos preocupamos por ti, y por ellos.",
