traducción terminada, empiezo carousel

--- a/cuidados/src/components/translations/en/global.json
+++ b/cuidados/src/components/translations/en/global.json
@@ -24,5 +24,14 @@
         "elderly":"Elderly",
         "children":"Children",
         "send-button":"Send"
+    },
+    "menu-settings":{
+        "login":"Loging",
+        "register":"Register",
+        "account":"My Account",
+        "logout":"Logout"
+    },
+    "menu-login":{
+        "name":"Username"
     }
 }
