condicional tipo de usuario funciona

--- a/cuidados/src/components/translations/en/global.json
+++ b/cuidados/src/components/translations/en/global.json
@@ -7,7 +7,7 @@
         "catch-phrase": "Caretakers for every necessity."
     },
     "menu":{
-        "products":"Products",
+        "services":"Services",
         "pricing":"Prices",
         "about-us":"About us"
     },
