--- a/cuidados/src/components/translations/es/global.json
+++ b/cuidados/src/components/translations/es/global.json
@@ -7,7 +7,7 @@
         "catch-phrase": "Cuidadores para todo tipo de necesidad."
     },
     "menu":{
-        "products":"Productos",
+        "services":"Servicios",
         "pricing":"Precios",
         "about-us":"Sobre Nosotros"
     },
