--- a/cuidados/src/components/translations/es/global.json
+++ b/cuidados/src/components/translations/es/global.json
@@ -45,6 +45,13 @@
         "messages":"Mis mensajes",
         "alert":"¡ESCUCHA!",
         "delete":"BORRAR CUENTA",
-        "text-alert":"En WECARE no compartimos tus datos con terceros, esta información es tuya y solo tuya, no te preocupes por tus transacciones con otros usuarios, nosotros somos sólo mediadores, gracias por confiar en nuestra plataforma."}
+        "text-alert":"En WECARE no compartimos tus datos con terceros, esta información es tuya y solo tuya, no te preocupes por tus transacciones con otros usuarios, nosotros somos sólo mediadores, gracias por confiar en nuestra plataforma."
+    },
+    "modal":{
+        "title":"¡Muchas gracias!",
+        "titleError": "Ha ocurrido un error",
+        "text": "Tu mensaje ha sido enviado.",
+        "textError":"Por favor haz login para enviar un mensaje"
+    }
     
 }
