--- a/cuidados/src/components/translations/en/global.json
+++ b/cuidados/src/components/translations/en/global.json
@@ -3,9 +3,9 @@
         "Hello-world": "Choose your languaje"
     },
     "claim":{
-        "claim-phrase": "Welcome to WECARE.",
-        "catch-phrase": "Caretakers for every necessity.",
-        "catch-phrase2": "Leave it in our hands."
+        "claim-phrase": "Welcome to",
+        "catch-phrase": "Caretakers for every necessity",
+        "catch-phrase2": "Leave it in our hands"
     },
     "menu":{
         "services":"Services",
