--- a/cuidados/src/components/translations/es/global.json
+++ b/cuidados/src/components/translations/es/global.json
@@ -3,9 +3,9 @@
         "Hello-world": "Elije tu idioma"
     },
     "claim":{
-        "claim-phrase": "Bienvenido a WECARE",
-        "catch-phrase": "Cuidadores para todo tipo de necesidad.",
-        "catch-phrase2": "Déjalo en nuestras manos."
+        "claim-phrase": "Bienvenido a",
+        "catch-phrase": "Cuidadores para todo tipo de necesidad",
+        "catch-phrase2": "Déjalo en nuestras manos"
     },
     "menu":{
         "services":"Servicios",
